; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/extr_video_crt_switch.c_crt_aspect_ratio_switch.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/extr_video_crt_switch.c_crt_aspect_ratio_switch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fly_aspect = common dso_local global float 0.000000e+00, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @crt_aspect_ratio_switch(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = uitofp i32 %5 to float
  %7 = load i32, i32* %4, align 4
  %8 = uitofp i32 %7 to float
  %9 = fdiv float %6, %8
  store float %9, float* @fly_aspect, align 4
  %10 = load float, float* @fly_aspect, align 4
  %11 = call i32 @video_driver_set_aspect_ratio_value(float %10)
  ret void
}

declare dso_local i32 @video_driver_set_aspect_ratio_value(float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
